--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<!--<script src="/lib/jquery/jquery-1.11.0.min.js"></script>
 		<script src="/lib/bootstrap/bootstrap.min.js"></script>-->
+		<script src="/js/fastclick.js"></script>
+		
 		<script src="/lib/angular/angular.min.js"></script>
 		<script src="/lib/angular/angular-route.min.js"></script>
 		<script src="/lib/angular/angular-resource.min.js"> </script>
