--- a/client-site/public/index.html
+++ b/client-site/public/index.html
@@ -18,7 +18,7 @@
 		<script src="/js/directives.js"></script>
 		<script src="/js/services.js"></script>
 		<script src="/js/filters.js"></script>
-		
+		<script src="/js/angular-bootstrap.js"></script>
 		<script src="/js/PushNotification.js"></script>
 		<script type="text/javascript" src="//localhost:9000/livereload.js"></script> 
 
